# mastoposter

./: .dockerignore  .gitignore  Dockerfile  README  README.md  TODO  config.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
contrib/: mastoposter.initd  mastoposter.service
mastoposter/: __init__.py  __main__.py  sources.py  types.py  utils.py
mastoposter/filters/: __init__.py  base.py  boost.py  boost_filter.py  combined.py  combined_filter.py  media.py  mention.py  spoiler.py  text.py  visibility.py
mastoposter/integrations/: __init__.py  base.py  telegram.py
mastoposter/integrations/discord/: __init__.py  types.py
mastoposter/mkconfig/: __main__.py
mastoposter/mkconfig/backends/: base.py
mastoposter/text/: __init__.py  __main__.py  html.py  markdown.py  plain.py
mastoreposter/: __main__.py  sources.py  types.py
mastoreposter/integrations/: __init__.py  base.py  telegram.py
tests/: test_text_utils.py
