[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mastoposter"
description = "Configurable reposter from Mastodon-compatible Fediverse servers"
authors = [
    {name = "hatkidchan", email = "hatkidchan@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP"
]
keywords = ["mastodon", "discord", "telegram"]
requires-python = ">=3.8"
dependencies = [
    "Jinja2",
    "beautifulsoup4[lxml]",
    "emoji",
    "httpx",
    "websockets"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/hatkidchan/mastoposter"

[project.scripts]
mastoposter = "mastoposter.__main__:main"

[tool.flit.sdist]
include = ["config.ini", "contrib/*"]

[tool.black]
line-length = 79
target-version = ['py37', 'py38']

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
